# agenteconreadiness

./: .gitignore  LICENSE  README.md  pyproject.toml
aeread_lab/: __init__.py  cache.py  cli.py  models.py  parsing.py  reporting.py  runner.py  stability.py  stats.py
aeread_lab/core/: __init__.py  axioms.py  identify.py
aeread_lab/exploitation/: __init__.py  channel.py  zero_sum.py
aeread_lab/rlvr/: __init__.py  supplier_scam_trajectory.py
aeread_lab/tasks/: __init__.py  adversarial.py  alignment_tax.py  ambiguity.py  auction.py  bargaining.py  belief_bargaining.py  common_value.py  experiment_design.py  exploration.py  forecast_calibration.py  identification.py  market.py  matching.py  means_legitimacy.py  mechanism.py  moral_hazard.py  portfolio.py  pricing.py  principal_holding_filing_trace.py  principal_holding_prediction.py  principal_holding_prediction_blind_notes.py  principal_holding_prediction_noisy.py  principal_holding_prediction_notes.py  principal_inference.py  procurement.py  regime.py  retail.py  revealed_allocation.py  saturation.py  screening.py  (+2 more)
docs/: ARCHITECTURE.md  _config.yml  aeread_env_design.md  build_lab.md  build_lab_tracking.md  exploitation_channel.md  exploitation_foundations.md  exploitation_zero_sum.md  index.md  layer3_candidates.md  methodology.md  methodology_open_questions.md  prior_art_brief.md  proposal.md  reading_list.txt  refocus.md  rlvr_supplier_scam_trajectory.md  v0_sprint.md
tests/: test_axioms.py  test_exploitation.py  test_identify.py  test_means_legitimacy.py  test_regime.py  test_saturation.py  test_tasks.py
(+49 files in other folders)
